--- a/ChocolateMashedPotatoCake.html
+++ b/ChocolateMashedPotatoCake.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="allRecieps.html" class="nav-link">All recipes</a>
+                    <a href="allRecipes.html" class="nav-link">All recipes</a>
                 </li>
                 
             </ul>
@@ -38,7 +38,7 @@
             <div class="col-12 col-lg-9 pt-5 pl-5 pr-5 pb-0">
                 <h1 class="text-center mb-5">Chocolate-Mashed Potato Cake with Ganache</h1>
                 <img class="d-block mx-auto  img-fluid" src="https://images.food52.com/-F9Bt_qf_9OIJaH5YwBlJZ56_ks=/768x511/e9e49ae0-3fa6-4213-9159-476057615267--2014-0103_WC_chocolate-mashed-potato-cake-with-ganache-010_1-.jpg" alt="">
-                <div id="reciepsBtn" class="d-flex justify-content-center p-4">
+                <div id="RecipesBtn" class="d-flex justify-content-center p-4">
                     <button type="button" class="btn mr-3"><i class="far fa-bookmark"></i> Save</button>
                     <button type="button" class="btn "><i class="fas fa-print"></i> Print</button>
                 </div>
@@ -109,16 +109,16 @@
                 <h3 id="" class="pt-4">Directions</h3>
                 <hr class="">
                 <div id="directions" >
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Preheat the oven to 350°F. Grease and flour a large bundt or tube pan and set it aside. Peel the potato and cut it into large cubes. Place the cubes in a saucepot and cover with water. Place over medium high heat, bring to a boil, and cook until the potatoes are tender. Drain the water off and using a masher or a mixer, mash the potatoes until no lumps (or very small ones) remain. Measure out 3/4 cup for the recipe. Take the remaining potatoes, season them as you desire, and eat them before they get cold.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>In a large mixing bowl or the bowl of a stand mixer, place the sugar, cake flour and baking soda and with the mixer on low, allow the mixture to combine, about 1 minute. Add the potatoes, butter, melted chocolate, and vanilla and mix on low speed to combine. Raise the speed to medium and allow it to beat until fluffy, about 2 to 3 minutes.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Whisk together the eggs and the buttermilk. Slowly add the mixture to the batter. Scrape the bowl well and combine it completely. Scrape the batter into a pan and bake until a pick inserted comes out clean, about an hour. Allow the cake to cool in the pan for 20 minutes and then remove it from the pan to finish cooling on a rack.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Place the glaze ingredients in a small sauté pan over low heat. As this heats, stir it to melt the chocolate. Do not let it boil or simmer. Keep stirring until half the chocolate is melted. Remove from the heat and continue stirring to melt the remaining lumps. When the cake has completely cooled, use a piping bag or a spoon to drizzle the glaze over the top of the cake.</p>
                     </div>
                 </div>
@@ -130,9 +130,9 @@
         <!-- Footer Links -->
         <div class="container-fluid text-center justify-content-center">
             <!-- Grid row -->
-            <h5 class="text-uppercase">Baking Recieps</h5>
+            <h5 class="text-uppercase">Baking Recipes</h5>
             <div class="list-unstyled text-uppercase">
-                <a href="allRecieps.html" class="px-2">All recipes </a>
+                <a href="allRecipes.html" class="px-2">All recipes </a>
             
             </div>
         </div>
