--- a/9smarty.html
+++ b/9smarty.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="allRecieps.html" class="nav-link">All recipes</a>
+                    <a href="allRecipes.html" class="nav-link">All recipes</a>
                 </li>
                 
             </ul>
@@ -97,9 +97,9 @@
         <!-- Footer Links -->
         <div class="container-fluid text-center justify-content-center">
             <!-- Grid row -->
-            <h5 class="text-uppercase">Baking Recieps</h5>
+            <h5 class="text-uppercase">Baking Recipes</h5>
             <div class="list-unstyled text-uppercase">
-                <a href="allRecieps.html" class="px-2">All recipes </a>
+                <a href="allRecipes.html" class="px-2">All recipes </a>
                 
             </div>
         </div>
