--- a/allRecipes.html
+++ b/allRecipes.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>ALL RECIEPS</title>
+    <title>ALL RECIPES</title>
 </head>
 
 <body>
@@ -96,9 +96,9 @@
         <!-- Footer Links -->
         <div class="container-fluid text-center justify-content-center">
             <!-- Grid row -->
-            <h5 class="text-uppercase">Baking Recieps</h5>
+            <h5 class="text-uppercase">Baking Recipes</h5>
             <div class="list-unstyled text-uppercase">
-                <a href="allRecieps.html" class="px-2">All recipes </a>
+                <a href="allRecipes.html" class="px-2">All recipes </a>
               
             </div>
         </div>
