--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="allRecieps.html" class="nav-link">All recipes</a>
+                    <a href="allrecipes.html" class="nav-link">All recipes</a>
                 </li>
               
             </ul>
@@ -43,21 +43,21 @@
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="https://images.unsplash.com/photo-1554405934-5d1bcf0cab68?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80" alt="First slide">
                     <div class="carousel-caption d-block px-3">
-                        <div id="nameOfReciepe">Oaxacan Cinnamon Chocolate Macarons</div>
+                        <div id="nameOfRecipe">Oaxacan Cinnamon Chocolate Macarons</div>
                         <a href="macarons.html" class="btn">Read more</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="https://images.unsplash.com/photo-1485474187873-a541e1da7c51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="Second slide">
                     <div class="carousel-caption  d-block">
-                        <div id="nameOfReciepe" class="px-0">Chocolate-Mashed Potato Cake with Ganache</div>
+                        <div id="nameOfRecipe" class="px-0">Chocolate-Mashed Potato Cake with Ganache</div>
                         <a href="ChocolateMashedPotatoCake.html" class="btn">Read more</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="https://images.unsplash.com/photo-1562007908-859b4ba9a1a2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Third slide">
                     <div class="carousel-caption d-block">
-                        <div id="nameOfReciepe">Simple Summer Peach Cake</div>
+                        <div id="nameOfRecipe">Simple Summer Peach Cake</div>
                         <a href="peachCake.html" class="btn">Read more</a>
                     </div>
                 </div>
@@ -137,9 +137,9 @@
         <!-- Footer Links -->
         <div class="container-fluid text-center justify-content-center">
             <!-- Grid row -->
-            <h5 class="text-uppercase">Baking Recieps</h5>
+            <h5 class="text-uppercase">Baking recipes</h5>
             <div class="list-unstyled text-uppercase">
-                <a href="allRecieps.html" class="px-2">All recipes </a>
+                <a href="allrecipes.html" class="px-2">All recipes </a>
              
             </div>
         </div>
