--- a/peachCake.html
+++ b/peachCake.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="allRecieps.html" class="nav-link">All recipes</a>
+                    <a href="allRecipes.html" class="nav-link">All recipes</a>
                 </li>
             </ul>
         </div>
@@ -37,7 +37,7 @@
             <div class="col-12 col-lg-9 pt-5 pl-5 pr-5 pb-0">
                 <h1 class="text-center mb-5">Simple Summer Peach Cake</h1>
                 <img class="d-block mx-auto  img-fluid" src="https://images.food52.com/B4SULXF6tgqqWa1GepwGfUs3duE=/768x511/028ec69a-ae48-43ff-993b-25bc09900f4f--9094917538_66daa1babb_z.jpg" alt="">
-                <div id="reciepsBtn" class="d-flex justify-content-center p-4">
+                <div id="recipesBtn" class="d-flex justify-content-center p-4">
                     <button type="button" class="btn mr-3"><i class="far fa-bookmark"></i> Save</button>
                     <button type="button" class="btn "><i class="fas fa-print"></i> Print</button>
                 </div>
@@ -112,22 +112,22 @@
                 <h3 id="" class="pt-4">Directions</h3>
                 <hr class="">
                 <div id="directions">
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Preheat the oven to 350 degrees. Butter and flour a 9-inch cake pan.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Cut the peaches into bite sized pieces. Toss the peaches with nutmeg and 2 tablespoons sugar. Set aside.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Cream together the butter and remaining sugar with a wooden spoon or spatula. Add the egg, buttermilk and extracts, and stir to combine.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Combine the flours, baking powder, baking soda and salt. Add this flour mixture to the butter mixture, mix until smooth (some lumps may remain). Pour into the prepared pan.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Press the peaches into the top of the cake. They can be nicely arranged, but I like to cram as many peaches as possible into the cake. Sprinkle turbinado sugar over the top.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Bake for 10 minutes, then reduce the oven heat to 325 degrees and bake for an additional 45 to 55 minutes, or until a toothpick in the center comes out clean.</p>
                     </div>
                 </div>
@@ -139,9 +139,9 @@
         <!-- Footer Links -->
         <div class="container-fluid text-center justify-content-center">
             <!-- Grid row -->
-            <h5 class="text-uppercase">Baking Recieps</h5>
+            <h5 class="text-uppercase">Baking Recipes</h5>
             <div class="list-unstyled text-uppercase">
-                <a href="allRecieps.html" class="px-2">All recipes </a>
+                <a href="allRecipes.html" class="px-2">All recipes </a>
             </div>
         </div>
         <!-- Footer Links -->
