--- a/saltinCracker.html
+++ b/saltinCracker.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="allRecieps.html" class="nav-link">All recipes</a>
+                    <a href="allRecipes.html" class="nav-link">All recipes</a>
                 </li>
                 
             </ul>
@@ -38,7 +38,7 @@
             <div class="col-12 col-lg-9 pt-5 pl-5 pr-5 pb-0">
                 <h1 class="text-center mb-5">Saltine Cracker Brownie Ice Cream Sandwich</h1>
                 <img class="d-block mx-auto  img-fluid" src="https://thumbor.food52.com/BlQgBF-X5-5SEPtasYX5AtAjC00=/965x643/filters:format(webp)/86352c28-5442-4f56-9278-2376ba7c0af6--soda-cracker-sandwich16.jpg" alt="">
-                <div id="reciepsBtn" class="d-flex justify-content-center p-4">
+                <div id="recipesBtn" class="d-flex justify-content-center p-4">
                     <button type="button" class="btn mr-3"><i class="far fa-bookmark"></i> Save</button>
                     <button type="button" class="btn "><i class="fas fa-print"></i> Print</button>
                 </div>
@@ -127,30 +127,30 @@
                 <hr class="">
                 <div id="directions" >
                      <p id="italic">Cracker and Brownie Layers</p>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Using a 9 inch square pan, estimate exactly how many pieces of crackers you’ll need to cover the top and bottom layer. In the ideal world, the crackers you purchased would fit perfectly into the pan like Cinderella and her shoe, but let’s just take a wild guess that neither of our worlds is a real-life fairy-tale -- it’s ok to trim the crackers to fit the pan (see step 4). Just in case, take out 5 to 6 extra crackers extra to protect against potential errors. Once you've figured out how many crackers you'll need, melt 2 tablespoons of butter in the microwave and brush the crackers on both sides. Set aside.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Mix the brownie batter: Combine semi-sweet chocolate and unsalted butter in a large microwave-proof bowl. Heat until the ingredients have melted. Add the granulated sugar, brown sugar, large eggs, ground espresso beans and vanilla extract. Whisk until it’s smooth and slightly fluffy. Sift all-purpose flour, cocoa powder and fine sea salt into the bowl. Fold the ingredients together with a spatula or whisk until smooth. Set aside.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Assemble the brownie and cracker layer: Brush the pan with some oil and line it with parchment paper. Pour the brownie batter into the pan and smooth the top with a spatula. Arrange the crackers on top of the batter and once you get to the edges where a whole cracker no longer fit, just simply cut the cracker with a sharp knife into the exact size. Once you have completely covered the top with crackers, scatter the rest of the crackers on another baking sheet. Place the square-pan with the brownies on the middle-rack and the baking sheet with the crackers on the lower-rack. Bake in the oven for 25 minutes. The brownie should be slightly underdone -- a wooden skewer should come out moist with wet crumbs.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Remove the brownie and the crackers. Let the brownie cool for 10 minutes, then move the entire pan into the freezer to chill for 30 minutes. It should be completely cold before you continue the next step.</p>
                     </div>
 
                      <p id="italic">No churn ice cream layer</p>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Assemble the ice cream layer: Take the brownie-cracker pan out of the freezer. Lift and peel the parchment paper to remove it from the pan. Then, line the pan again with parchment paper and invert the brownie and cracker back into the pan so that now, the cracker-layer is facing down and lining the pan. If you have trimmed/uneven cracker, take note of which sides the uneven crackers are. You’ll want to match the top and bottom layer so you can make even cuts later.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Make the ice cream: Combine sweetened condensed milk, vanilla extract and dark rum together in a small bowl. Set aside. With a stand or handheld mixer, whisk the heavy cream on medium-high speed until soft peaks form, approximately 3 minutes. It's always better to under-whisk the cream than to over-whisk it (I usually stop when I see a train of ripples forming after the trail of the whisk). With a spatula, gently fold the sweetened condensed milk mixture into the whipped cream until combined.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Pour the ice cream batter on top of the brownie and smooth the top with a spoon. Arrange the crackers on top of the ice cream-batter, but -- this is important -- make sure that the cracker arrangement matches the bottom cracker-layer (the uneven cracker pieces should be on the same side of the pan). Move the pan back into the freezer to harden, at least 8 hours to overnight.</p>
                     </div>
-                    <div class="reciepSteps">
+                    <div class="recipeSteps">
                         <p>Cut between each crackers into little sandwiches. Wrap each with plastic wrap and keep in the freezer for anytime craving.</p>
                     </div>
                 </div>
@@ -164,9 +164,9 @@
         <!-- Footer Links -->
         <div class="container-fluid text-center justify-content-center">
             <!-- Grid row -->
-            <h5 class="text-uppercase">Baking Recieps</h5>
+            <h5 class="text-uppercase">Baking Recipes</h5>
             <div class="list-unstyled text-uppercase">
-                <a href="allRecieps.html" class="px-2">All recipes </a>
+                <a href="allRecipes.html" class="px-2">All recipes </a>
            
             </div>
         </div>
