--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="allrecipes.html" class="nav-link">All recipes</a>
+                    <a href="allRecipes.html" class="nav-link">All recipes</a>
                 </li>
               
             </ul>
